--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="_css/custom.css">
-  <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-  <script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script> 
+  <link rel="stylesheet" type="text/css" href="_assets/_css/custom.css">
+  <script src= "_assets/bower_components/angular/angular.min.js"></script>
+  <script src= "_assets/bower_components/angular-route/angular-route.min.js"></script>
 </head>
 <!-- Start app -->
 <body ng-app="app">
@@ -43,15 +43,15 @@
 
   <!-- Script Section -->
   <!-- Module App -->
-  <script src= "_js/app.js"></script>
+  <script src= "_assets/_js/app.js"></script>
   <!-- Module Controllers -->
-  <script src= "_js/controllers.js"></script>
+  <script src= "_assets/_js/controllers.js"></script>
   <!-- Module Filters -->
-  <script src= "_js/filters.js"></script>
+  <script src= "_assets/_js/filters.js"></script>
   <!-- Module Services -->
-  <script src= "_js/services.js"></script>
+  <script src= "_assets/_js/services.js"></script>
   <!-- Module Directives -->
-  <script src= "_js/directives.js"></script>
+  <script src= "_assets/_js/directives.js"></script>
 
   <!-- Template -->
   <script type="text/ng-template" id="view1.html">
